--- a/hera_dish.tex
+++ b/hera_dish.tex
@@ -83,10 +83,10 @@
 \subsection{bent pipes as approximation to parabola}
 The construction method is based on the use of a reasonably stiff spar supported at a few points as a low-pass spatial filter.  Additionally, a moment-loaded beam naturally attains a parabolic shape, depending on the loading, the moment of intertia and the material's Young's modulus (see {\em e.g.} http://ruina.tam.cornell.edu/ Courses/~ME4730/ Rand4770 Vibrations/ BeamFormulas.pdf).  In this instance we fix the angle at the rim ($r_e$) of 7m and at a hub radius ($r_h$) of about 45 cm, so between those two points, the effective angle is $(r_e-r_h)/(2F)$, where $F$ is the focal length (4.5m).  Equating that angle to the angle of the cantilevered beam (using scenario 5 of the web-site) we find
 \begin{equation}
-y = \left(\frac{r_e-r_h}{L}\right)\frac{x^2}{4F}
+y = \left(\frac{r_e-r_h}{L}\right)\frac{x^2}{4F} \equiv  \frac{x^2}{4F_e}
 \end{equation}
 where $L$ is the length of the beam.
-Assuming, $(r_e-r_h) \approx L$ (in this case, the ratio is 0.91) we find we have the equation for our desired parabola.  Note that we do not contend that this figure over the entire length of the actual beam achieves this, but merely that if properly held and loaded it tends to the right shape.
+Note that we do not contend that this figure over the entire length of the actual beam achieves this, but merely that if properly held and loaded it tends to the right shape.  Furthermore, we see that the parabola will tend to have a larger focal length than desired (about 10\% for HERA) unless we compensate by modifying the end angle of the spar by setting it to $(L+r_h)/(2F)$.
 
 In our construction, we hold the spar at three locations at the proper location and angle and then rely on the fairly stiff spar to "filter" out any higher frequency ripples and on the physics to give us the overall general shape.
 
